--- a/azure-pipelines/azure-pipelines-DEPLOY-OPENBAO.yml
+++ b/azure-pipelines/azure-pipelines-DEPLOY-OPENBAO.yml
@@ -8,7 +8,7 @@ trigger:
       - main
   paths:
     include:
-      - kubernetes*
+      - kubernetes/*
 
 pool:
   name: "On Premise - BT-INFRA - LINUX"
